[gd_scene load_steps=17 format=2]

[ext_resource path="res://audio/doors.ogg" type="AudioStream" id=1]
[ext_resource path="res://textures/metal_black.material" type="Material" id=2]
[ext_resource path="res://textures/metal.material" type="Material" id=3]
[ext_resource path="res://textures/stripes.material" type="Material" id=4]
[ext_resource path="res://maps/the_doors.gd" type="Script" id=5]

[sub_resource type="ArrayMesh" id=1]
surfaces/0 = {
"aabb": AABB( -1.21429, -9.21639, -8, 2, 18, 16 ),
"array_data": PoolByteArray( 183, 109, 155, 191, 82, 118, 19, 193, 0, 0, 128, 64, 0, 0, 129, 0, 127, 0, 0, 129, 0, 184, 0, 0, 146, 36, 73, 63, 82, 118, 19, 193, 0, 0, 128, 64, 0, 0, 129, 0, 127, 0, 0, 129, 0, 56, 0, 0, 146, 36, 73, 63, 174, 137, 12, 65, 0, 0, 128, 64, 0, 0, 129, 0, 127, 0, 0, 129, 0, 56, 128, 200, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 128, 64, 0, 0, 129, 0, 127, 0, 0, 129, 0, 0, 128, 200, 183, 109, 155, 191, 93, 19, 249, 64, 0, 0, 128, 64, 0, 0, 129, 0, 127, 0, 0, 129, 0, 184, 64, 200, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 128, 64, 167, 89, 0, 0, 0, 0, 127, 127, 0, 64, 0, 0, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 0, 65, 167, 89, 0, 0, 0, 0, 127, 127, 0, 68, 0, 0, 183, 109, 155, 191, 93, 19, 249, 64, 0, 0, 224, 64, 167, 89, 0, 0, 0, 0, 127, 127, 0, 67, 0, 56, 183, 109, 155, 191, 93, 19, 249, 64, 0, 0, 128, 64, 167, 89, 0, 0, 0, 0, 127, 127, 0, 64, 0, 56, 146, 36, 73, 63, 82, 118, 19, 193, 0, 0, 128, 64, 0, 129, 0, 0, 0, 0, 127, 129, 0, 64, 0, 184, 183, 109, 155, 191, 82, 118, 19, 193, 0, 0, 128, 64, 0, 129, 0, 0, 0, 0, 127, 129, 0, 64, 0, 56, 183, 109, 155, 191, 82, 118, 19, 193, 0, 0, 224, 64, 0, 129, 0, 0, 0, 0, 127, 129, 0, 67, 0, 56, 183, 109, 91, 190, 82, 118, 19, 193, 0, 0, 0, 65, 0, 129, 0, 0, 0, 0, 127, 129, 0, 68, 0, 0, 146, 36, 73, 63, 82, 118, 19, 193, 0, 0, 0, 65, 0, 129, 0, 0, 0, 0, 127, 129, 0, 68, 0, 184, 146, 36, 73, 63, 174, 137, 12, 65, 0, 0, 128, 64, 0, 127, 0, 0, 0, 0, 127, 127, 0, 64, 0, 184, 146, 36, 73, 63, 174, 137, 12, 65, 0, 0, 0, 65, 0, 127, 0, 0, 0, 0, 127, 127, 0, 68, 0, 184, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 0, 65, 0, 127, 0, 0, 0, 0, 127, 127, 0, 68, 0, 0, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 128, 64, 0, 127, 0, 0, 0, 0, 127, 127, 0, 64, 0, 0, 183, 109, 155, 191, 82, 118, 19, 193, 0, 0, 224, 64, 167, 0, 89, 0, 0, 0, 127, 127, 0, 67, 0, 0, 183, 109, 155, 191, 93, 19, 249, 64, 0, 0, 224, 64, 167, 0, 89, 0, 0, 0, 127, 127, 0, 67, 64, 200, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 0, 65, 167, 0, 89, 0, 0, 0, 127, 127, 0, 68, 128, 200, 183, 109, 91, 190, 82, 118, 19, 193, 0, 0, 0, 65, 167, 0, 89, 0, 0, 0, 127, 127, 0, 68, 0, 0, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 0, 65, 0, 0, 127, 0, 127, 0, 0, 127, 0, 0, 128, 200, 146, 36, 73, 63, 174, 137, 12, 65, 0, 0, 0, 65, 0, 0, 127, 0, 127, 0, 0, 127, 0, 56, 128, 200, 146, 36, 73, 63, 82, 118, 19, 193, 0, 0, 0, 65, 0, 0, 127, 0, 127, 0, 0, 127, 0, 56, 0, 0, 183, 109, 91, 190, 82, 118, 19, 193, 0, 0, 0, 65, 0, 0, 127, 0, 127, 0, 0, 127, 0, 0, 0, 0, 183, 109, 155, 191, 82, 118, 19, 193, 0, 0, 128, 192, 0, 0, 129, 0, 127, 0, 0, 129, 0, 184, 0, 0, 183, 109, 91, 190, 82, 118, 19, 193, 0, 0, 128, 192, 0, 0, 129, 0, 127, 0, 0, 129, 0, 0, 0, 0, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 128, 192, 0, 0, 129, 0, 127, 0, 0, 129, 0, 0, 128, 200, 183, 109, 155, 191, 93, 19, 249, 64, 0, 0, 128, 192, 0, 0, 129, 0, 127, 0, 0, 129, 0, 184, 64, 200, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 128, 192, 167, 89, 0, 0, 0, 0, 127, 127, 0, 192, 0, 0, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 128, 64, 167, 89, 0, 0, 0, 0, 127, 127, 0, 64, 0, 0, 183, 109, 155, 191, 93, 19, 249, 64, 0, 0, 128, 64, 167, 89, 0, 0, 0, 0, 127, 127, 0, 64, 0, 56, 183, 109, 155, 191, 93, 19, 249, 64, 0, 0, 128, 192, 167, 89, 0, 0, 0, 0, 127, 127, 0, 192, 0, 56, 183, 109, 91, 190, 82, 118, 19, 193, 0, 0, 128, 192, 0, 129, 0, 0, 0, 0, 127, 129, 0, 192, 0, 0, 183, 109, 155, 191, 82, 118, 19, 193, 0, 0, 128, 192, 0, 129, 0, 0, 0, 0, 127, 129, 0, 192, 0, 56, 183, 109, 155, 191, 82, 118, 19, 193, 0, 0, 128, 64, 0, 129, 0, 0, 0, 0, 127, 129, 0, 64, 0, 56, 183, 109, 91, 190, 82, 118, 19, 193, 0, 0, 128, 64, 0, 129, 0, 0, 0, 0, 127, 129, 0, 64, 0, 0, 183, 109, 155, 191, 82, 118, 19, 193, 0, 0, 128, 64, 0, 0, 127, 0, 127, 0, 0, 127, 0, 184, 0, 0, 183, 109, 155, 191, 93, 19, 249, 64, 0, 0, 128, 64, 0, 0, 127, 0, 127, 0, 0, 127, 0, 184, 64, 200, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 128, 64, 0, 0, 127, 0, 127, 0, 0, 127, 0, 0, 128, 200, 183, 109, 91, 190, 82, 118, 19, 193, 0, 0, 128, 64, 0, 0, 127, 0, 127, 0, 0, 127, 0, 0, 0, 0, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 128, 192, 0, 0, 129, 0, 127, 0, 0, 129, 0, 0, 128, 200, 183, 109, 91, 190, 93, 19, 185, 64, 0, 0, 128, 192, 0, 0, 129, 0, 127, 0, 0, 129, 0, 0, 128, 199, 146, 36, 73, 63, 93, 19, 185, 64, 0, 0, 128, 192, 0, 0, 129, 0, 127, 0, 0, 129, 0, 56, 128, 199, 146, 36, 73, 63, 174, 137, 12, 65, 0, 0, 128, 192, 0, 0, 129, 0, 127, 0, 0, 129, 0, 56, 128, 200, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 128, 192, 129, 0, 0, 0, 0, 0, 127, 127, 0, 192, 128, 200, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 128, 64, 129, 0, 0, 0, 0, 0, 127, 127, 0, 64, 128, 200, 183, 109, 91, 190, 93, 19, 185, 64, 0, 0, 128, 64, 129, 0, 0, 0, 0, 0, 127, 127, 0, 64, 128, 199, 183, 109, 91, 190, 93, 19, 185, 64, 0, 0, 128, 192, 129, 0, 0, 0, 0, 0, 127, 127, 0, 192, 128, 199, 146, 36, 73, 63, 93, 19, 185, 64, 0, 0, 128, 192, 0, 129, 0, 0, 0, 0, 127, 129, 0, 192, 0, 184, 183, 109, 91, 190, 93, 19, 185, 64, 0, 0, 128, 192, 0, 129, 0, 0, 0, 0, 127, 129, 0, 192, 0, 0, 183, 109, 91, 190, 93, 19, 185, 64, 0, 0, 128, 64, 0, 129, 0, 0, 0, 0, 127, 129, 0, 64, 0, 0, 146, 36, 73, 63, 93, 19, 185, 64, 0, 0, 128, 64, 0, 129, 0, 0, 0, 0, 127, 129, 0, 64, 0, 184, 146, 36, 73, 63, 174, 137, 12, 65, 0, 0, 128, 192, 0, 127, 0, 0, 0, 0, 127, 127, 0, 192, 0, 184, 146, 36, 73, 63, 174, 137, 12, 65, 0, 0, 128, 64, 0, 127, 0, 0, 0, 0, 127, 127, 0, 64, 0, 184, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 128, 64, 0, 127, 0, 0, 0, 0, 127, 127, 0, 64, 0, 0, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 128, 192, 0, 127, 0, 0, 0, 0, 127, 127, 0, 192, 0, 0, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 128, 64, 0, 0, 127, 0, 127, 0, 0, 127, 0, 0, 128, 200, 146, 36, 73, 63, 174, 137, 12, 65, 0, 0, 128, 64, 0, 0, 127, 0, 127, 0, 0, 127, 0, 56, 128, 200, 146, 36, 73, 63, 93, 19, 185, 64, 0, 0, 128, 64, 0, 0, 127, 0, 127, 0, 0, 127, 0, 56, 128, 199, 183, 109, 91, 190, 93, 19, 185, 64, 0, 0, 128, 64, 0, 0, 127, 0, 127, 0, 0, 127, 0, 0, 128, 199, 183, 109, 91, 190, 163, 236, 198, 192, 0, 0, 128, 192, 0, 0, 129, 0, 127, 0, 0, 129, 0, 0, 0, 190, 183, 109, 91, 190, 82, 118, 19, 193, 0, 0, 128, 192, 0, 0, 129, 0, 127, 0, 0, 129, 0, 0, 0, 0, 146, 36, 73, 63, 82, 118, 19, 193, 0, 0, 128, 192, 0, 0, 129, 0, 127, 0, 0, 129, 0, 56, 0, 0, 146, 36, 73, 63, 163, 236, 198, 192, 0, 0, 128, 192, 0, 0, 129, 0, 127, 0, 0, 129, 0, 56, 0, 190, 183, 109, 91, 190, 163, 236, 198, 192, 0, 0, 128, 192, 129, 0, 0, 0, 0, 0, 127, 127, 0, 192, 0, 190, 183, 109, 91, 190, 163, 236, 198, 192, 0, 0, 128, 64, 129, 0, 0, 0, 0, 0, 127, 127, 0, 64, 0, 190, 183, 109, 91, 190, 82, 118, 19, 193, 0, 0, 128, 64, 129, 0, 0, 0, 0, 0, 127, 127, 0, 64, 0, 0, 183, 109, 91, 190, 82, 118, 19, 193, 0, 0, 128, 192, 129, 0, 0, 0, 0, 0, 127, 127, 0, 192, 0, 0, 146, 36, 73, 63, 82, 118, 19, 193, 0, 0, 128, 192, 0, 129, 0, 0, 0, 0, 127, 129, 0, 192, 0, 184, 183, 109, 91, 190, 82, 118, 19, 193, 0, 0, 128, 192, 0, 129, 0, 0, 0, 0, 127, 129, 0, 192, 0, 0, 183, 109, 91, 190, 82, 118, 19, 193, 0, 0, 128, 64, 0, 129, 0, 0, 0, 0, 127, 129, 0, 64, 0, 0, 146, 36, 73, 63, 82, 118, 19, 193, 0, 0, 128, 64, 0, 129, 0, 0, 0, 0, 127, 129, 0, 64, 0, 184, 146, 36, 73, 63, 163, 236, 198, 192, 0, 0, 128, 192, 0, 127, 0, 0, 0, 0, 127, 127, 0, 192, 0, 184, 146, 36, 73, 63, 163, 236, 198, 192, 0, 0, 128, 64, 0, 127, 0, 0, 0, 0, 127, 127, 0, 64, 0, 184, 183, 109, 91, 190, 163, 236, 198, 192, 0, 0, 128, 64, 0, 127, 0, 0, 0, 0, 127, 127, 0, 64, 0, 0, 183, 109, 91, 190, 163, 236, 198, 192, 0, 0, 128, 192, 0, 127, 0, 0, 0, 0, 127, 127, 0, 192, 0, 0, 183, 109, 91, 190, 163, 236, 198, 192, 0, 0, 128, 64, 0, 0, 127, 0, 127, 0, 0, 127, 0, 0, 0, 190, 146, 36, 73, 63, 163, 236, 198, 192, 0, 0, 128, 64, 0, 0, 127, 0, 127, 0, 0, 127, 0, 56, 0, 190, 146, 36, 73, 63, 82, 118, 19, 193, 0, 0, 128, 64, 0, 0, 127, 0, 127, 0, 0, 127, 0, 56, 0, 0, 183, 109, 91, 190, 82, 118, 19, 193, 0, 0, 128, 64, 0, 0, 127, 0, 127, 0, 0, 127, 0, 0, 0, 0, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 0, 193, 0, 0, 129, 0, 127, 0, 0, 129, 0, 0, 128, 200, 183, 109, 91, 190, 82, 118, 19, 193, 0, 0, 0, 193, 0, 0, 129, 0, 127, 0, 0, 129, 0, 0, 0, 0, 146, 36, 73, 63, 82, 118, 19, 193, 0, 0, 0, 193, 0, 0, 129, 0, 127, 0, 0, 129, 0, 56, 0, 0, 146, 36, 73, 63, 174, 137, 12, 65, 0, 0, 0, 193, 0, 0, 129, 0, 127, 0, 0, 129, 0, 56, 128, 200, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 0, 193, 167, 0, 167, 0, 127, 0, 0, 129, 0, 68, 127, 200, 183, 109, 155, 191, 93, 19, 249, 64, 0, 0, 224, 192, 167, 0, 167, 0, 127, 0, 0, 129, 0, 67, 63, 200, 183, 109, 155, 191, 82, 118, 19, 193, 0, 0, 224, 192, 167, 0, 167, 0, 127, 0, 0, 129, 0, 67, 0, 0, 183, 109, 91, 190, 82, 118, 19, 193, 0, 0, 0, 193, 167, 0, 167, 0, 127, 0, 0, 129, 0, 68, 0, 0, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 128, 192, 167, 89, 0, 0, 0, 0, 127, 127, 0, 192, 0, 0, 183, 109, 155, 191, 93, 19, 249, 64, 0, 0, 128, 192, 167, 89, 0, 0, 0, 0, 127, 127, 0, 192, 0, 56, 183, 109, 155, 191, 93, 19, 249, 64, 0, 0, 224, 192, 167, 89, 0, 0, 0, 0, 127, 127, 0, 195, 0, 56, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 0, 193, 167, 89, 0, 0, 0, 0, 127, 127, 0, 196, 0, 0, 146, 36, 73, 63, 82, 118, 19, 193, 0, 0, 0, 193, 0, 129, 0, 0, 0, 0, 127, 129, 0, 196, 0, 184, 183, 109, 91, 190, 82, 118, 19, 193, 0, 0, 0, 193, 0, 129, 0, 0, 0, 0, 127, 129, 0, 196, 0, 0, 183, 109, 155, 191, 82, 118, 19, 193, 0, 0, 224, 192, 0, 129, 0, 0, 0, 0, 127, 129, 0, 195, 0, 56, 183, 109, 155, 191, 82, 118, 19, 193, 0, 0, 128, 192, 0, 129, 0, 0, 0, 0, 127, 129, 0, 192, 0, 56, 146, 36, 73, 63, 82, 118, 19, 193, 0, 0, 128, 192, 0, 129, 0, 0, 0, 0, 127, 129, 0, 192, 0, 184, 146, 36, 73, 63, 174, 137, 12, 65, 0, 0, 0, 193, 0, 127, 0, 0, 0, 0, 127, 127, 0, 196, 0, 184, 146, 36, 73, 63, 174, 137, 12, 65, 0, 0, 128, 192, 0, 127, 0, 0, 0, 0, 127, 127, 0, 192, 0, 184, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 128, 192, 0, 127, 0, 0, 0, 0, 127, 127, 0, 192, 0, 0, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 0, 193, 0, 127, 0, 0, 0, 0, 127, 127, 0, 196, 0, 0, 183, 109, 155, 191, 82, 118, 19, 193, 0, 0, 128, 192, 0, 0, 127, 0, 127, 0, 0, 127, 0, 184, 0, 0, 183, 109, 155, 191, 93, 19, 249, 64, 0, 0, 128, 192, 0, 0, 127, 0, 127, 0, 0, 127, 0, 184, 64, 200, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 128, 192, 0, 0, 127, 0, 127, 0, 0, 127, 0, 0, 128, 200, 146, 36, 73, 63, 174, 137, 12, 65, 0, 0, 128, 192, 0, 0, 127, 0, 127, 0, 0, 127, 0, 56, 128, 200, 146, 36, 73, 63, 82, 118, 19, 193, 0, 0, 128, 192, 0, 0, 127, 0, 127, 0, 0, 127, 0, 56, 0, 0 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 0, 0, 2, 0, 3, 0, 0, 0, 3, 0, 4, 0, 5, 0, 6, 0, 7, 0, 5, 0, 7, 0, 8, 0, 9, 0, 10, 0, 11, 0, 9, 0, 11, 0, 12, 0, 9, 0, 12, 0, 13, 0, 14, 0, 15, 0, 16, 0, 14, 0, 16, 0, 17, 0, 18, 0, 19, 0, 20, 0, 18, 0, 20, 0, 21, 0, 22, 0, 23, 0, 24, 0, 22, 0, 24, 0, 25, 0, 26, 0, 27, 0, 28, 0, 26, 0, 28, 0, 29, 0, 30, 0, 31, 0, 32, 0, 30, 0, 32, 0, 33, 0, 34, 0, 35, 0, 36, 0, 34, 0, 36, 0, 37, 0, 38, 0, 39, 0, 40, 0, 38, 0, 40, 0, 41, 0, 42, 0, 43, 0, 44, 0, 42, 0, 44, 0, 45, 0, 46, 0, 47, 0, 48, 0, 46, 0, 48, 0, 49, 0, 50, 0, 51, 0, 52, 0, 50, 0, 52, 0, 53, 0, 54, 0, 55, 0, 56, 0, 54, 0, 56, 0, 57, 0, 58, 0, 59, 0, 60, 0, 58, 0, 60, 0, 61, 0, 62, 0, 63, 0, 64, 0, 62, 0, 64, 0, 65, 0, 66, 0, 67, 0, 68, 0, 66, 0, 68, 0, 69, 0, 70, 0, 71, 0, 72, 0, 70, 0, 72, 0, 73, 0, 74, 0, 75, 0, 76, 0, 74, 0, 76, 0, 77, 0, 78, 0, 79, 0, 80, 0, 78, 0, 80, 0, 81, 0, 82, 0, 83, 0, 84, 0, 82, 0, 84, 0, 85, 0, 86, 0, 87, 0, 88, 0, 86, 0, 88, 0, 89, 0, 90, 0, 91, 0, 92, 0, 90, 0, 92, 0, 93, 0, 94, 0, 95, 0, 96, 0, 94, 0, 96, 0, 97, 0, 94, 0, 97, 0, 98, 0, 99, 0, 100, 0, 101, 0, 99, 0, 101, 0, 102, 0, 103, 0, 104, 0, 105, 0, 103, 0, 105, 0, 106, 0, 103, 0, 106, 0, 107, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 168,
"material": ExtResource( 4 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 108
}
surfaces/1 = {
"aabb": AABB( -1.21429, -9.21639, -8, 2, 18, 16 ),
"array_data": PoolByteArray( 183, 109, 155, 191, 82, 118, 19, 193, 0, 0, 128, 64, 129, 0, 0, 0, 0, 0, 127, 127, 0, 60, 0, 0, 183, 109, 155, 191, 93, 19, 249, 64, 0, 0, 128, 64, 129, 0, 0, 0, 0, 0, 127, 127, 0, 60, 64, 196, 183, 109, 155, 191, 93, 19, 249, 64, 0, 0, 224, 64, 129, 0, 0, 0, 0, 0, 127, 127, 0, 63, 64, 196, 183, 109, 155, 191, 82, 118, 19, 193, 0, 0, 224, 64, 129, 0, 0, 0, 0, 0, 127, 127, 0, 63, 0, 0, 146, 36, 73, 63, 174, 137, 12, 65, 0, 0, 128, 64, 127, 0, 0, 0, 0, 0, 127, 129, 0, 60, 128, 196, 146, 36, 73, 63, 82, 118, 19, 193, 0, 0, 128, 64, 127, 0, 0, 0, 0, 0, 127, 129, 0, 60, 0, 0, 146, 36, 73, 63, 82, 118, 19, 193, 0, 0, 0, 65, 127, 0, 0, 0, 0, 0, 127, 129, 0, 64, 0, 0, 146, 36, 73, 63, 174, 137, 12, 65, 0, 0, 0, 65, 127, 0, 0, 0, 0, 0, 127, 129, 0, 64, 128, 196, 183, 109, 155, 191, 82, 118, 19, 193, 0, 0, 128, 192, 129, 0, 0, 0, 0, 0, 127, 127, 0, 188, 0, 0, 183, 109, 155, 191, 93, 19, 249, 64, 0, 0, 128, 192, 129, 0, 0, 0, 0, 0, 127, 127, 0, 188, 64, 196, 183, 109, 155, 191, 93, 19, 249, 64, 0, 0, 128, 64, 129, 0, 0, 0, 0, 0, 127, 127, 0, 60, 64, 196, 183, 109, 155, 191, 82, 118, 19, 193, 0, 0, 128, 64, 129, 0, 0, 0, 0, 0, 127, 127, 0, 60, 0, 0, 183, 109, 91, 190, 82, 118, 19, 193, 0, 0, 128, 192, 127, 0, 0, 0, 0, 0, 127, 129, 0, 188, 0, 0, 183, 109, 91, 190, 82, 118, 19, 193, 0, 0, 128, 64, 127, 0, 0, 0, 0, 0, 127, 129, 0, 60, 0, 0, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 128, 64, 127, 0, 0, 0, 0, 0, 127, 129, 0, 60, 128, 196, 183, 109, 91, 190, 174, 137, 12, 65, 0, 0, 128, 192, 127, 0, 0, 0, 0, 0, 127, 129, 0, 188, 128, 196, 146, 36, 73, 63, 174, 137, 12, 65, 0, 0, 128, 192, 127, 0, 0, 0, 0, 0, 127, 129, 0, 188, 128, 196, 146, 36, 73, 63, 93, 19, 185, 64, 0, 0, 128, 192, 127, 0, 0, 0, 0, 0, 127, 129, 0, 188, 128, 195, 146, 36, 73, 63, 93, 19, 185, 64, 0, 0, 128, 64, 127, 0, 0, 0, 0, 0, 127, 129, 0, 60, 128, 195, 146, 36, 73, 63, 174, 137, 12, 65, 0, 0, 128, 64, 127, 0, 0, 0, 0, 0, 127, 129, 0, 60, 128, 196, 146, 36, 73, 63, 163, 236, 198, 192, 0, 0, 128, 192, 127, 0, 0, 0, 0, 0, 127, 129, 0, 188, 0, 186, 146, 36, 73, 63, 82, 118, 19, 193, 0, 0, 128, 192, 127, 0, 0, 0, 0, 0, 127, 129, 0, 188, 0, 0, 146, 36, 73, 63, 82, 118, 19, 193, 0, 0, 128, 64, 127, 0, 0, 0, 0, 0, 127, 129, 0, 60, 0, 0, 146, 36, 73, 63, 163, 236, 198, 192, 0, 0, 128, 64, 127, 0, 0, 0, 0, 0, 127, 129, 0, 60, 0, 186, 183, 109, 155, 191, 82, 118, 19, 193, 0, 0, 224, 192, 129, 0, 0, 0, 0, 0, 127, 127, 0, 191, 0, 0, 183, 109, 155, 191, 93, 19, 249, 64, 0, 0, 224, 192, 129, 0, 0, 0, 0, 0, 127, 127, 0, 191, 64, 196, 183, 109, 155, 191, 93, 19, 249, 64, 0, 0, 128, 192, 129, 0, 0, 0, 0, 0, 127, 127, 0, 188, 64, 196, 183, 109, 155, 191, 82, 118, 19, 193, 0, 0, 128, 192, 129, 0, 0, 0, 0, 0, 127, 127, 0, 188, 0, 0, 146, 36, 73, 63, 174, 137, 12, 65, 0, 0, 0, 193, 127, 0, 0, 0, 0, 0, 127, 129, 0, 192, 128, 196, 146, 36, 73, 63, 82, 118, 19, 193, 0, 0, 0, 193, 127, 0, 0, 0, 0, 0, 127, 129, 0, 192, 0, 0, 146, 36, 73, 63, 82, 118, 19, 193, 0, 0, 128, 192, 127, 0, 0, 0, 0, 0, 127, 129, 0, 188, 0, 0, 146, 36, 73, 63, 174, 137, 12, 65, 0, 0, 128, 192, 127, 0, 0, 0, 0, 0, 127, 129, 0, 188, 128, 196 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 0, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 4, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 8, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 12, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 16, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 20, 0, 22, 0, 23, 0, 24, 0, 25, 0, 26, 0, 24, 0, 26, 0, 27, 0, 28, 0, 29, 0, 30, 0, 28, 0, 30, 0, 31, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 48,
"material": ExtResource( 2 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 32
}
surfaces/2 = {
"aabb": AABB( -0.214286, -3.21639, -4, 1, 6, 8 ),
"array_data": PoolByteArray( 183, 109, 91, 190, 71, 217, 13, 192, 0, 0, 128, 192, 0, 0, 129, 0, 127, 0, 0, 129, 0, 0, 0, 191, 183, 109, 91, 190, 71, 217, 77, 192, 0, 0, 128, 192, 0, 0, 129, 0, 127, 0, 0, 129, 0, 0, 0, 190, 146, 36, 73, 63, 71, 217, 77, 192, 0, 0, 128, 192, 0, 0, 129, 0, 127, 0, 0, 129, 0, 52, 0, 190, 146, 36, 73, 63, 71, 217, 13, 192, 0, 0, 128, 192, 0, 0, 129, 0, 127, 0, 0, 129, 0, 52, 0, 191, 183, 109, 91, 190, 71, 217, 13, 192, 0, 0, 128, 192, 129, 0, 0, 0, 0, 0, 127, 127, 0, 188, 0, 191, 183, 109, 91, 190, 71, 217, 13, 192, 0, 0, 128, 64, 129, 0, 0, 0, 0, 0, 127, 127, 0, 60, 0, 191, 183, 109, 91, 190, 71, 217, 77, 192, 0, 0, 128, 64, 129, 0, 0, 0, 0, 0, 127, 127, 0, 60, 0, 190, 183, 109, 91, 190, 71, 217, 77, 192, 0, 0, 128, 192, 129, 0, 0, 0, 0, 0, 127, 127, 0, 188, 0, 190, 146, 36, 73, 63, 71, 217, 77, 192, 0, 0, 128, 192, 0, 129, 0, 0, 0, 0, 127, 129, 0, 188, 0, 180, 183, 109, 91, 190, 71, 217, 77, 192, 0, 0, 128, 192, 0, 129, 0, 0, 0, 0, 127, 129, 0, 188, 0, 0, 183, 109, 91, 190, 71, 217, 77, 192, 0, 0, 128, 64, 0, 129, 0, 0, 0, 0, 127, 129, 0, 60, 0, 0, 146, 36, 73, 63, 71, 217, 77, 192, 0, 0, 128, 64, 0, 129, 0, 0, 0, 0, 127, 129, 0, 60, 0, 180, 146, 36, 73, 63, 71, 217, 13, 192, 0, 0, 128, 192, 0, 127, 0, 0, 0, 0, 127, 127, 0, 188, 0, 180, 146, 36, 73, 63, 71, 217, 13, 192, 0, 0, 128, 64, 0, 127, 0, 0, 0, 0, 127, 127, 0, 60, 0, 180, 183, 109, 91, 190, 71, 217, 13, 192, 0, 0, 128, 64, 0, 127, 0, 0, 0, 0, 127, 127, 0, 60, 0, 0, 183, 109, 91, 190, 71, 217, 13, 192, 0, 0, 128, 192, 0, 127, 0, 0, 0, 0, 127, 127, 0, 188, 0, 0, 146, 36, 73, 63, 71, 217, 13, 192, 0, 0, 128, 192, 127, 0, 0, 0, 0, 0, 127, 129, 0, 188, 0, 191, 146, 36, 73, 63, 71, 217, 77, 192, 0, 0, 128, 192, 127, 0, 0, 0, 0, 0, 127, 129, 0, 188, 0, 190, 146, 36, 73, 63, 71, 217, 77, 192, 0, 0, 128, 64, 127, 0, 0, 0, 0, 0, 127, 129, 0, 60, 0, 190, 146, 36, 73, 63, 71, 217, 13, 192, 0, 0, 128, 64, 127, 0, 0, 0, 0, 0, 127, 129, 0, 60, 0, 191, 183, 109, 91, 190, 71, 217, 13, 192, 0, 0, 128, 64, 0, 0, 127, 0, 127, 0, 0, 127, 0, 0, 0, 191, 146, 36, 73, 63, 71, 217, 13, 192, 0, 0, 128, 64, 0, 0, 127, 0, 127, 0, 0, 127, 0, 52, 0, 191, 146, 36, 73, 63, 71, 217, 77, 192, 0, 0, 128, 64, 0, 0, 127, 0, 127, 0, 0, 127, 0, 52, 0, 190, 183, 109, 91, 190, 71, 217, 77, 192, 0, 0, 128, 64, 0, 0, 127, 0, 127, 0, 0, 127, 0, 0, 0, 190, 183, 109, 91, 190, 185, 38, 50, 64, 0, 0, 128, 192, 0, 0, 129, 0, 127, 0, 0, 129, 0, 0, 0, 194, 183, 109, 91, 190, 114, 77, 228, 63, 0, 0, 128, 192, 0, 0, 129, 0, 127, 0, 0, 129, 0, 0, 128, 193, 146, 36, 73, 63, 114, 77, 228, 63, 0, 0, 128, 192, 0, 0, 129, 0, 127, 0, 0, 129, 0, 52, 128, 193, 146, 36, 73, 63, 185, 38, 50, 64, 0, 0, 128, 192, 0, 0, 129, 0, 127, 0, 0, 129, 0, 52, 0, 194, 183, 109, 91, 190, 185, 38, 50, 64, 0, 0, 128, 192, 129, 0, 0, 0, 0, 0, 127, 127, 0, 188, 0, 194, 183, 109, 91, 190, 185, 38, 50, 64, 0, 0, 128, 64, 129, 0, 0, 0, 0, 0, 127, 127, 0, 60, 0, 194, 183, 109, 91, 190, 114, 77, 228, 63, 0, 0, 128, 64, 129, 0, 0, 0, 0, 0, 127, 127, 0, 60, 128, 193, 183, 109, 91, 190, 114, 77, 228, 63, 0, 0, 128, 192, 129, 0, 0, 0, 0, 0, 127, 127, 0, 188, 128, 193, 146, 36, 73, 63, 114, 77, 228, 63, 0, 0, 128, 192, 0, 129, 0, 0, 0, 0, 127, 129, 0, 188, 0, 180, 183, 109, 91, 190, 114, 77, 228, 63, 0, 0, 128, 192, 0, 129, 0, 0, 0, 0, 127, 129, 0, 188, 0, 0, 183, 109, 91, 190, 114, 77, 228, 63, 0, 0, 128, 64, 0, 129, 0, 0, 0, 0, 127, 129, 0, 60, 0, 0, 146, 36, 73, 63, 114, 77, 228, 63, 0, 0, 128, 64, 0, 129, 0, 0, 0, 0, 127, 129, 0, 60, 0, 180, 146, 36, 73, 63, 185, 38, 50, 64, 0, 0, 128, 192, 0, 127, 0, 0, 0, 0, 127, 127, 0, 188, 0, 180, 146, 36, 73, 63, 185, 38, 50, 64, 0, 0, 128, 64, 0, 127, 0, 0, 0, 0, 127, 127, 0, 60, 0, 180, 183, 109, 91, 190, 185, 38, 50, 64, 0, 0, 128, 64, 0, 127, 0, 0, 0, 0, 127, 127, 0, 60, 0, 0, 183, 109, 91, 190, 185, 38, 50, 64, 0, 0, 128, 192, 0, 127, 0, 0, 0, 0, 127, 127, 0, 188, 0, 0, 146, 36, 73, 63, 185, 38, 50, 64, 0, 0, 128, 192, 127, 0, 0, 0, 0, 0, 127, 129, 0, 188, 0, 194, 146, 36, 73, 63, 114, 77, 228, 63, 0, 0, 128, 192, 127, 0, 0, 0, 0, 0, 127, 129, 0, 188, 128, 193, 146, 36, 73, 63, 114, 77, 228, 63, 0, 0, 128, 64, 127, 0, 0, 0, 0, 0, 127, 129, 0, 60, 128, 193, 146, 36, 73, 63, 185, 38, 50, 64, 0, 0, 128, 64, 127, 0, 0, 0, 0, 0, 127, 129, 0, 60, 0, 194, 183, 109, 91, 190, 185, 38, 50, 64, 0, 0, 128, 64, 0, 0, 127, 0, 127, 0, 0, 127, 0, 0, 0, 194, 146, 36, 73, 63, 185, 38, 50, 64, 0, 0, 128, 64, 0, 0, 127, 0, 127, 0, 0, 127, 0, 52, 0, 194, 146, 36, 73, 63, 114, 77, 228, 63, 0, 0, 128, 64, 0, 0, 127, 0, 127, 0, 0, 127, 0, 52, 128, 193, 183, 109, 91, 190, 114, 77, 228, 63, 0, 0, 128, 64, 0, 0, 127, 0, 127, 0, 0, 127, 0, 0, 128, 193 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 0, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 4, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 8, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 12, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 16, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 20, 0, 22, 0, 23, 0, 24, 0, 25, 0, 26, 0, 24, 0, 26, 0, 27, 0, 28, 0, 29, 0, 30, 0, 28, 0, 30, 0, 31, 0, 32, 0, 33, 0, 34, 0, 32, 0, 34, 0, 35, 0, 36, 0, 37, 0, 38, 0, 36, 0, 38, 0, 39, 0, 40, 0, 41, 0, 42, 0, 40, 0, 42, 0, 43, 0, 44, 0, 45, 0, 46, 0, 44, 0, 46, 0, 47, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 72,
"material": ExtResource( 3 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 48
}

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( -1.21429, -9.21639, 4, 0.785714, -9.21639, 4, 0.785714, 8.78361, 4, -0.214286, 8.78361, 4, -1.21429, 7.78361, 4, -1.21429, 7.78361, 7, -1.21429, -9.21639, 7, -0.214286, 8.78361, 8, -0.214286, -9.21639, 8, 0.785714, -9.21639, 8, 0.785714, 8.78361, 8 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( -0.214286, -2.21639, -4, -0.214286, -3.21639, -4, 0.785714, -3.21639, -4, 0.785714, -2.21639, -4, -0.214286, -2.21639, 4, -0.214286, -3.21639, 4, 0.785714, -3.21639, 4, 0.785714, -2.21639, 4 )

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( -1.21429, -9.21639, -4, -0.214286, -9.21639, -4, -0.214286, 8.78361, -4, -1.21429, 7.78361, -4, -1.21429, 7.78361, 4, -1.21429, -9.21639, 4, -0.214286, 8.78361, 4, -0.214286, -9.21639, 4 )

[sub_resource type="ConvexPolygonShape" id=5]
points = PoolVector3Array( -0.214286, 2.78361, -4, -0.214286, 1.78361, -4, 0.785714, 1.78361, -4, 0.785714, 2.78361, -4, -0.214286, 2.78361, 4, -0.214286, 1.78361, 4, 0.785714, 1.78361, 4, 0.785714, 2.78361, 4 )

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( -0.214286, 8.78361, -4, -0.214286, 5.78361, -4, 0.785714, 5.78361, -4, 0.785714, 8.78361, -4, -0.214286, 8.78361, 4, -0.214286, 5.78361, 4, 0.785714, 5.78361, 4, 0.785714, 8.78361, 4 )

[sub_resource type="ConvexPolygonShape" id=7]
points = PoolVector3Array( -0.214286, -6.21639, -4, -0.214286, -9.21639, -4, 0.785714, -9.21639, -4, 0.785714, -6.21639, -4, -0.214286, -6.21639, 4, -0.214286, -9.21639, 4, 0.785714, -9.21639, 4, 0.785714, -6.21639, 4 )

[sub_resource type="ConvexPolygonShape" id=8]
points = PoolVector3Array( -0.214286, 8.78361, -8, -0.214286, -9.21639, -8, 0.785714, -9.21639, -8, 0.785714, 8.78361, -8, -1.21429, 7.78361, -7, -1.21429, -9.21639, -7, -1.21429, 7.78361, -4, -1.21429, -9.21639, -4, -0.214286, 8.78361, -4, 0.785714, -9.21639, -4, 0.785714, 8.78361, -4 )

[sub_resource type="ConvexPolygonShape" id=9]
points = PoolVector3Array( -1.5, 4, -8, -1.5, -4, -8, 1.5, -4, -8, 1.5, 4, -8, -1.5, 4, 8, -1.5, -4, 8, 1.5, -4, 8, 1.5, 4, 8 )

[sub_resource type="Animation" id=10]
resource_name = "close"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/door:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -1.87219, 9.21639, -13.8335 ), Vector3( -1.87219, 9.21639, 0 ), Vector3( 0.214286, 9.21639, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "closed"
} ]
}

[sub_resource type="Animation" id=11]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/door:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.214286, 9.21639, 0 ), Vector3( -1.87219, 9.21639, 0 ), Vector3( -1.87219, 9.21639, -13.8335 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "opened"
} ]
}

[node name="door_big" type="Spatial"]
script = ExtResource( 5 )

[node name="pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 8 )

[node name="door" type="StaticBody" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.214286, 9.21639, 0 )

[node name="entity_4_mesh_instance" type="MeshInstance" parent="pivot/door"]
use_in_baked_light = true
mesh = SubResource( 1 )
material/0 = null
material/1 = null
material/2 = null

[node name="entity_4_brush_0_collision_shape" type="CollisionShape" parent="pivot/door"]
shape = SubResource( 2 )

[node name="entity_4_brush_1_collision_shape" type="CollisionShape" parent="pivot/door"]
shape = SubResource( 3 )

[node name="entity_4_brush_2_collision_shape" type="CollisionShape" parent="pivot/door"]
shape = SubResource( 4 )

[node name="entity_4_brush_3_collision_shape" type="CollisionShape" parent="pivot/door"]
shape = SubResource( 5 )

[node name="entity_4_brush_4_collision_shape" type="CollisionShape" parent="pivot/door"]
shape = SubResource( 6 )

[node name="entity_4_brush_5_collision_shape" type="CollisionShape" parent="pivot/door"]
shape = SubResource( 7 )

[node name="entity_4_brush_6_collision_shape" type="CollisionShape" parent="pivot/door"]
shape = SubResource( 8 )

[node name="trigger" type="Area" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 4, 0 )

[node name="entity_2_brush_0_collision_shape" type="CollisionShape" parent="pivot/trigger"]
shape = SubResource( 9 )

[node name="doors_anim" type="AnimationPlayer" parent="."]
anims/close = SubResource( 10 )
anims/open = SubResource( 11 )

[node name="audio" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.84056, 0 )
stream = ExtResource( 1 )
unit_db = 4.0
unit_size = 2.0
bus = "Effects"

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true
[connection signal="body_entered" from="pivot/trigger" to="." method="_on_trigger_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
